--- a/index.html
+++ b/index.html
@@ -70,9 +70,111 @@
                </div>
             </div>
          </section>
-      </main>
+         <section class="section__solution">
+            <div class="section__solution-container">
+               <div class="section__solution-left">
+                  <img src="assets/img/section__solution/img.jpg" alt="#">
+               </div>
+               <div class="section__solution-right">
+                  <h2 class="solution__right-title">Решение для роскошного отдыха</h2>
+                  <div class="solution__right-subtitle">Любовь с первого взгляда.</div>
+                  <div class="solution__right-text">Вилла Светлана для отдыха вашей мечты: абсолютный комфорт, высококлассные услуги и элегантная обстановка, готовая подарить вам неповторимые моменты. Среда и пространство предназначены для обеспечения уникальных впечатлений, способных задействовать все органы чувств.   
+                     <p><br></p>
+                     Вилла Светлана для отдыха вашей мечты: абсолютный комфорт, высококлассные услуги и элегантная обстановка, готовая подарить вам неповторимые моменты. Среда и пространство предназначены для обеспечения уникальных впечатлений, способных задействовать все органы чувств.   
+                     <p><br></p>
+                     Вилла Светлана для отдыха вашей мечты: абсолютный комфорт, высококлассные услуги и элегантная обстановка, готовая подарить вам неповторимые моменты.
+                  </div>
+               </div>
+            </div>
+         </section>
+         <div class="section__relax">
+            <div class="section__relax-container">
+               <div class="section__relax-left">
+                  <h2 class="section__relax-title">
+                     Истрия - это уникальное место для отдыха
+                  </h2>
+                  <div class="section__relax-text">Поверхность Истрии представляет возвышенность, спускающуюся уклоном с севера на юг и наполненную отрогами горного массива Карст. Высочайшая вершина полуострова, гора Учка (Učka), поднимается на 1396 метров. Со стороны Кварнерского залива, где отроги подходят к самому морю, они образуют утёсы и скалы. Почву образуют известковые породы. Пресной водой полуостров очень беден: самые большие реки — Мирна на западном берегу и Раша на восточном и единственное маленькое Чепицкое озеро.
+                     <p><br></p>
+                     Изрезанный берег полуострова создаёт чрезвычайно большое количество бухт и гаваней — крупнейшим заливом является узкий Лимский залив. Климат Истрии тёплый, очень сухой, особенно летом. Берега полуострова подвержены сильным ветрам. Один из них — холодный бора — дует в направлении с северо-востока; другой тёплый и влажный — сирокко — дует с юго-востока.
+                     <p><br></p>
+                     На полуострове в большом количестве выращиваются виноград, оливки, инжир и самые разнообразные фрукты. На Истрии сохранились прекрасные леса — более 35% поверхности полуострова покрыто ими: основные деревья — сосна, дуб, вяз.
 
-      <div class="header__menu">
+                  </div>
+                  <a href="#" class="menu__link-card">
+                     <img class="link__card-img" src="assets/img/section__relax/card.svg" alt="card">
+                     <div class="link__card-text link__card-text-gray"><span>Посмотреть на карте</span></div>
+                  </a>
+               </div>
+               <div class="section__relax-slide-mobile">
+                  <div class="relax__slide-img">
+                     <img src="assets/img/section__relax/img.png" alt="#">
+                  </div>
+                  <div class="relax__slide-row">
+                     <div class="slide__row-num">
+                        <div class="slide__row-num-start">01</div>
+                        <div class="slide__row-num-line"></div>
+                        <div class="slide__row-num-end">04</div>
+                     </div>
+                     <div class="slide__row-nav">
+                        <div class="slide__row-nav-left">
+                           <img src="assets/img/section__relax/left.svg" alt="#">
+                        </div>
+                        <div class="slide__row-nav-right">
+                           <img src="assets/img/section__relax/right.svg" alt="#">
+                        </div>
+                     </div>
+                  </div>
+               </div>  
+               <div class="section__relax-slide">
+                  <div class="relax__slide-img">
+                     <img src="assets/img/section__relax/img.png" alt="#">
+                  </div>
+                  <div class="relax__slide-row">
+                     <div class="slide__row-num">
+                        <div class="slide__row-num-start">01</div>
+                        <div class="slide__row-num-line"></div>
+                        <div class="slide__row-num-end">04</div>
+                     </div>
+                     <div class="slide__row-nav">
+                        <div class="slide__row-nav-left">
+                           <img src="assets/img/section__relax/left.svg" alt="#">
+                        </div>
+                        <div class="slide__row-nav-right">
+                           <img src="assets/img/section__relax/right.svg" alt="#">
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </main>
+   
+
+
+   <div id="popup" class="popup">
+         <div class="popup__body">
+             <div class="popup__content">
+                 <div class="popup__cancel">
+                     <img src="assets/img/popup/close.svg" alt="close">
+                 </div>
+                 <div class="popup__left">
+                     <a href="index.html" class="popup__left-logo">
+                        <img src="assets/img/header/logo.png" alt="logo">
+                     </a>
+                     <div class="popup__title">Будьте в курсе событий</div>
+                     <div class="popup__subtitle">Подпишитесь на рассылку со специальными предложениями, а мы организуем для Вас отдых премиум-класса</div>
+                     <input type="text" class="popup__input" placeholder="Укажите e-mail">
+                     <div class="popup__button">ПОДПИСАТЬСЯ</div>
+                 </div>
+                 <div class="popup__right">
+                     <img src="assets/img/popup/img.jpg" alt="img">
+                 </div>
+      
+             </div>
+         </div>
+   </div>  
+
+   <div class="header__menu">
             <img src="assets/img/header/close.svg" alt="close" class="header__menu-close">
             <nav class="header__nav">
                <ul>
@@ -109,8 +211,8 @@
                </a>
             </div>
          
-      </div>
    </div>
-   <script src="assets/js/burger.js"></script>
+   
+   <script src="assets/js/main.js"></script>
 </body>
 </html>        
