--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                      </div>
                   </div>
                </div>
+               <a href="#" class="section__relax-button">Забронировать сейчас</a>
             </div>
          </div>
       </main>
