--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                </div>
                <div class="section__relax-slide-mobile">
                   <div class="relax__slide-img">
-                     <img src="assets/img/section__relax/img.png" alt="#">
+                     <img src="assets/img/section__relax/img.jpg" alt="#">
                   </div>
                   <div class="relax__slide-row">
                      <div class="slide__row-num">
@@ -127,7 +127,7 @@
                </div>  
                <div class="section__relax-slide">
                   <div class="relax__slide-img">
-                     <img src="assets/img/section__relax/img.png" alt="#">
+                     <img src="assets/img/section__relax/img.jpg" alt="#">
                   </div>
                   <div class="relax__slide-row">
                      <div class="slide__row-num">
