--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,600" rel="stylesheet" />
 </head>
 <body>
-   <div class="header__menu-back"></div>
+  
       <header class="header">
          <div class="header__container">
             <a href="index.html" class="header__logo"></a>
@@ -29,6 +29,7 @@
             </div>                               
          </div>
       </header>
+      <div class="header__menu-back"></div>
       <main class="main" >
          <section class="section__top">
             <div class="section__top-container">
@@ -361,7 +362,7 @@
             <nav class="header__nav">
                <ul>
                   <li>
-                     <a href="index.html">ГЛАВНАЯ</a>
+                     <a class="header__nav-black" href="index.html">ГЛАВНАЯ</a>
                   </li>
                   <li>
                      <a href="#">О нас</a>
