--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
          <div class="header__container">
             <a href="index.html" class="header__logo"></a>
             <div class="header__info">
-               <div class="header__info-adress">
+               <a  href="#" class="header__info-adress">
                   <img class="adress__img" src="assets/img/header/geo.svg" alt="geo">
                   <div class="adress-text">Sv. Petar na Moru 155, 23207, Sveti Petar na Moru, Kroatien</div>
-               </div>
+               </a>
                <div class="header__info-tel">
                   <img src="assets/img/header/phone.svg" alt="phone" class="tel__img">
                   <a href="tel:+382 68 120 752" class="tel__numbers">+382 68 120 752</a>
@@ -44,7 +44,7 @@
                   <div class="top__right-blockimg">
                      <img class="right-img" src="assets/img/section__top/villa_img_2.png" alt="#">
                      <div class="top__right-lang">
-                        <div class="right__lang-item">RU</div>
+                        <div class="right__lang-item right__lang-item-active ">RU</div>
                         <div class="right__lang-line"></div>
                         <div class="right__lang-item">DE</div>
                         <div class="right__lang-line"></div>
@@ -310,7 +310,7 @@
          <div class="footer__container">
             <div class="footer__left-column">
                <a href="index.html" class="left__column-name">Вилле Светлана</a>
-               <div class="left__column-adress">Sv. Petar na Moru 155, 23207, Sveti Petar na Moru, Kroatien</div>
+               <a href="" class="left__column-adress">Sv. Petar na Moru 155, 23207, Sveti Petar na Moru, Kroatien</a>
                <a href="tel:+382 68 120 752" class="left__column-tel">+382 68 120 752</a>
             </div>
             <div class="footer__central-column">
@@ -383,6 +383,11 @@
                </ul>
             
             </nav>
+            <div class="header__menu-lang">
+               <div class="header__menu-lang-item header__menu-lang-item-active">RU</div>
+               <div class="header__menu-lang-item">DE</div>
+               <div class="header__menu-lang-item">EN</div>
+            </div>
             <div class="header__menu-links">
                <a href="#" class="menu__link-card">
                   <img class="link__card-img" src="assets/img/header/card.svg" alt="card">
