--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
                   <h1 class="top__left-title">На вилле Светлана - отдых комфортен и безмятежен</h1>
                   <h2 class="top__left-subtitle">Вы можете планировать свой день так, как хотите, не ограничиваясь графиком ресторанов, бассейнов или анимации.</h2>
                   <div class="top__left-img">
-                     <img class="left-img" src="assets/img/section__top/villa_img_1.png" alt="villaimg1">
+                     <div class="top__left-container-img">
+                        <img src="assets/img/section__top/villa_img_1.jpg" alt="villaimg1">
+                     </div>
                   </div>
                </div>
                <div class="section__top-right">
                   <div class="top__right-blockimg">
-                     <img class="right-img" src="assets/img/section__top/villa_img_2.png" alt="#">
+                     <div class="top__right-container-img">
+                        <img  src="assets/img/section__top/villa_img_2.jpg" alt="#">
+                     </div>
+   
                      <div class="top__right-lang">
                         <div class="right__lang-item right__lang-item-active ">RU</div>
                         <div class="right__lang-line"></div>
